# SWIFT-Model-of-Eye-Movements

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
data/: load_data.py  training_data.npz
diagnostics/: diagnostics.py
docs/: COMPLETE_PROJECT_EXPLAINER.md  MODEL_SPEC.md  PROJECT_GUIDE.md  RESULTS.md
inference/: train_bayesflow.py  train_bayesflow_old.py
outputs/: all_participants_results.json  cross_participant_correlations.json  results_summary.json
simulator/: swift_simulator.py
swift/: __init__.py  config.py  data.py  diagnostics.py  generate.py  inference.py  simulator.py
tools/: all_participants_ppc.py  analyse_information.py  calibrate.py  show_results.py
